2005-08-22  Kelley Cook  <kcook@gcc.gnu.org>

	* Makefile.am (ACLOCAL_AMFLAGS): New.

2005-08-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/UIManager.java: fixed error message typo in static
	initialization code.
	
2005-08-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/AbstractDocument.java: fixed minor API doc problems,
	* javax/swing/text/Caret.java: likewise,
	* javax/swing/text/CompositeView.java: likewise,
	* javax/swing/text/DefaultCaret.java: likewise,
	* javax/swing/text/DefaultEditorKit.java: likewise,
	* javax/swing/text/DefaultStyledDocument.java: likewise,
	* javax/swing/text/ElementIterator.java: likewise,
	* javax/swing/text/GlyphView.java: likewise,
	* javax/swing/text/IconView.java: likewise,
	* javax/swing/text/View.java: likewise.

2005-08-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/SwingUtilities.java: fixed some minor API doc problems.
	
2005-08-22  David Gilbert  <david.gilbert@object-refinery.com>

	* NEWS: added item regarding javax.swing.plaf.multi.* package 
	implementation.
	
2005-08-22  Mark Wielaard  <mark@klomp.org>

	* native/jni/gtk-peer/gtkpeer.h (cp_gtk_clipboard,
	cp_gtk_stringTarget, cp_gtk_imageTarget, cp_gtk_filesTarget): New
	extern variables.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkSelection.c: New file.
	* native/jni/gtk-peer/Makefile.am (libgtkpeer_la_SOURCES): Add
	gnu_java_awt_peer_gtk_GtkSelection.c.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkClipboard.c: Renames
	clipboard to cp_gtk_clipboard, stringTarget to cp_gtk_stringTarget,
	imageTarget to cp_gtk_imageTarget, filesTarget to cp_gtk_filesTarget,
	cp_gtk_clipboard_owner_change_cb to clipboard_owner_change_cb,
	cp_gtk_clipboard_get_func to clipboard_get_func,
	cp_gtk_clipboard_clear_func to clipboard_clear_func, moved
	GtkSelection native methods to new file.

2005-08-21  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/gtk/GtkSelection.java: Update for new FSF