@@ -1,3 +1,5 @@
+/* DO NOT EDIT THIS FILE - it is machine generated */
+
 #ifndef __gnu_java_awt_peer_qt_QPainterPath__
 #define __gnu_java_awt_peer_qt_QPainterPath__
 
